# How-Institutional-Adoption-Changes-BTC-Market-Structure

./: .env.example  .gitignore  README.md  pyproject.toml
config/: transparency_sources.example.json
data/market_structure/: README.md  defillama_dat_share_pct.example.csv  defillama_etp_share_pct.example.csv  manual_image_claims.example.csv
docs/: transparency_research_plan.md
notebooks/: transparency_shift_analysis.ipynb
scripts/: analyze_transparency_shift.py  fetch_transparency_data.py
src/hv_btc_vault/: transparency_metrics.py
tests/: test_transparency_metrics.py
